adicionando target blank nos links do linkedin, github e instagram

--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
                 constantemente aprimorar minhas habilidades no campo da tecnologia. </p>
 
             <div class="social-icons">
-                <a href="https://www.linkedin.com/in/gustavo-macedo-vieira-0aba3026a/"><i class='bx bxl-linkedin'></i></a>
-                <a href="https://github.com/Gustavo3522"><i class='bx bxl-github' ></i></a>
-                <a href="https://www.instagram.com/gmacedo16/?next=%2F"><i class='bx bxl-instagram-alt' ></i></a>
+                <a href="https://www.linkedin.com/in/gustavo-macedo-vieira-0aba3026a/" target="_blank"><i class='bx bxl-linkedin'></i></a>
+                <a href="https://github.com/Gustavo3522" target="_blank"><i class='bx bxl-github'></i></a>
+                <a href="https://www.instagram.com/gmacedo16/?next=%2F" target="_blank"><i class='bx bxl-instagram-alt' ></i></a>
             </div>
 
         </div>
@@ -226,9 +226,10 @@
 
     <footer class="footer">
         <div class="social">
-            <a href="https://www.linkedin.com/in/gustavo-macedo-vieira-0aba3026a/"><i class='bx bxl-linkedin'></i></a>
-            <a href="https://github.com/Gustavo3522"><i class='bx bxl-github' ></i></a>
-            <a href="https://www.instagram.com/gmacedo16/?next=%2F"><i class='bx bxl-instagram-alt' ></i></a>
+            <a href="https://www.linkedin.com/in/gustavo-macedo-vieira-0aba3026a/" target="_blank"><i class='bx bxl-linkedin'></i></a>
+            <a href="https://github.com/Gustavo3522" target="_blank"><i class='bx bxl-github'></i></a>
+            <a href="https://www.instagram.com/gmacedo16/?next=%2F" target="_blank"><i class='bx bxl-instagram-alt'></i></a>
+            
         </div>
 
         <p class="copyright">
