Arrumando a área de projetos

--- a/index.html
+++ b/index.html
@@ -155,43 +155,90 @@
         <div class="services-container">
             <div class="service-box">
                 <div class="service-info">
-                    <h4>Java Projects</h4>
-                    <p>Aqui voce pode ver alguns projetos feitos em Java, todos
-                        esses projetos foram desenvolvidos durante o curso de Java
-                        do basico ao Profissional na plataforma da Udemy.
-                        <a href="https://github.com/Gustavo3522/_JAVA">Ver Projetos</a>
+                    <h4>Projeto em Java</h4>
+                    <p>Sistema de Gerenciamento de Funcionários
+
+                        Este projeto consiste em uma aplicação console em Java que gerencia informações
+                        de funcionários.
+                        
+                        Funcionalidades principais:
+                        - Cadastro de funcionários: Registra nome, função, salário e data de admissão.
+                        - Exibição de dados: Visualiza detalhes de todos os funcionários cadastrados.
+                        - Atualização: Permite alterar informações de um funcionário específico.
+                        - Exclusão: Remove um funcionário da lista de registros.
+
+                        A aplicação utiliza conceitos de orientação a objetos e listas dinâmicas,
+                        sendo ideal para aprendizado e prática de manipulação de dados em Java.
+
+                        Projeto desenvolvido para aprimorar conhecimentos e desenvolver novas habilidades
+                        <a href="https://github.com/Gustavo3522/_JAVA/tree/main/Gerenciamento%20de%20Funcionarios"target="_blank">Ver Projetos</a>
                     </p>
                 </div>
             </div>
 
             <div class="service-box">
                 <div class="service-info">
-                    <h4>HTML/CSS Projects</h4>
-                    <p>Projeto proposto no primeiro semestre 
-                        da facultade de Ciência da Computação, onde fizemos
-                        um site de viagens com HTML e CSS.
-                        <a href="https://github.com/Gustavo3522/HTML-CSS">Ver Projetos</a>
+                    <h4>Projeto em HTML/CSS</h4>
+                    <p>
+                        Agência de Viagens - Site Promocional
+
+                        Este projeto é um site promocional responsivo para uma agência
+                        de viagens, desenvolvido com HTML, CSS e JavaScript.
+
+                        Funcionalidades principais:
+                        - Apresentação de pacotes de viagem: Listagem de destinos com informações
+                        detalhadas e promoções.
+                        - Serviços oferecidos: Tours guiados, fotografia profissional e aluguel de veículos.
+                        - Seção de contato: Informações da agência com integração ao Google Maps.
+                        - Interatividade: Navegação suave por âncoras e ícones otimizados com Feather Icons.
+
+                        O site é ideal para agências de turismo que desejam atrair clientes apresentando
+                        seus pacotes e serviços de forma moderna e atrativa.
+
+                        Projeto Proposto pela Universidade Católica de Brasília
+                        <a href="https://github.com/Gustavo3522/HTML-CSS" target="_blank">Ver Projetos</a>
                     </p>
                 </div>
             </div>
 
             <div class="service-box">
                 <div class="service-info">
-                    <h4>C Projects</h4>
-                    <p>Projetos em C propostos na faculdade de Ciência da Computação
-                        onde desenvolvemos diversos projetos com intuito de aprendizado e 
-                        aprimoramento. 
-                        <a href="https://github.com/Gustavo3522/C">Ver Projetos</a>
+                    <h4>Projeto em C++</h4>
+                    <p>Um programa em C que gerencia reservas de assentos em salas de cinema, permitindo:
+
+                        Escolha de filmes e assentos disponíveis.
+                        Compra de ingressos com opção de meia-entrada e combos.
+                        Cancelamento de reservas com ajuste no total arrecadado.
+                        Geração de relatórios financeiros.
+                        O projeto explora conceitos de estrutura de dados, manipulação de matrizes
+                        e interação com o usuário por meio de menus simples e eficientes. 
+
+                        Projeto Proposto pela Universidade Católica de Brasília
+                        <a href="https://github.com/Gustavo3522/Bilheteria" target="_blank">Ver Projetos</a>
                     </p>
                 </div>
             </div>
 
             <div class="service-box">
                 <div class="service-info">
-                    <h4>Phyton Projects</h4>
-                    <p>Projetos feito durante o curso de Phyton na plataforma do curso em video
-                        com intuito de aprendizado e aprimoramento com o professor Gustavo Guanabara
-                        <a href="https://github.com/Gustavo3522/ExercisePython">Ver Projetos</a>
+                    <h4>Projetos em Phyton</h4>
+                    <p>Loja Virtual - Simulador de Pagamento
+
+                        Este projeto é uma aplicação em Python que simula um sistema de pagamento
+                        para uma loja virtual. Ele permite ao usuário calcular o preço final de uma
+                        compra com base na forma de pagamento escolhida.
+                        
+                        Funcionalidades principais:
+                        - Cálculo de descontos: Aplicação de descontos para pagamentos à vista em dinheiro,
+                        cheque ou cartão.
+                        - Parcelamento sem juros: Opção de parcelamento em 2x no cartão, sem acréscimos.
+                        - Parcelamento com juros: Parcelamento em 3x ou mais no cartão, com acréscimo de
+                        20% sobre o valor total.
+                        - Validação de entrada: Tratamento de opções inválidas de pagamento.
+
+                        O projeto reforça a prática de estruturas condicionais e cálculos financeiros básicos,
+                        sendo ideal para aprendizado em lógica de programação e interação com o usuário.
+                        <a href="https://github.com/Gustavo3522/ExercisePython/blob/main/EX44(Gerenciador%20de%20pagamentos)/index.py"target="_blank">Ver Projetos</a>
                         .</p>
                 </div>
             </div>
