Arrumando problema na responsividade do projeto

--- a/index.html
+++ b/index.html
@@ -160,12 +160,19 @@
 
                         Este projeto consiste em uma aplicação console em Java que gerencia informações
                         de funcionários.
-                        
+                        <br>
+                        <br>
                         Funcionalidades principais:
+                        <br>
                         - Cadastro de funcionários: Registra nome, função, salário e data de admissão.
+                        <br>
                         - Exibição de dados: Visualiza detalhes de todos os funcionários cadastrados.
+                        <br>
                         - Atualização: Permite alterar informações de um funcionário específico.
+                        <br>
                         - Exclusão: Remove um funcionário da lista de registros.
+                        <br>
+                        <br>
 
                         A aplicação utiliza conceitos de orientação a objetos e listas dinâmicas,
                         sendo ideal para aprendizado e prática de manipulação de dados em Java.
@@ -181,16 +188,24 @@
                     <h4>Projeto em HTML/CSS</h4>
                     <p>
                         Agência de Viagens - Site Promocional
+                        <br>
 
                         Este projeto é um site promocional responsivo para uma agência
                         de viagens, desenvolvido com HTML, CSS e JavaScript.
-
+                        <br>
+                        <br>
                         Funcionalidades principais:
+                        <br>
                         - Apresentação de pacotes de viagem: Listagem de destinos com informações
                         detalhadas e promoções.
+                        <br>
                         - Serviços oferecidos: Tours guiados, fotografia profissional e aluguel de veículos.
+                        <br>
                         - Seção de contato: Informações da agência com integração ao Google Maps.
+                        <br>
                         - Interatividade: Navegação suave por âncoras e ícones otimizados com Feather Icons.
+                        <br>
+                        <br>
 
                         O site é ideal para agências de turismo que desejam atrair clientes apresentando
                         seus pacotes e serviços de forma moderna e atrativa.
@@ -204,14 +219,29 @@
             <div class="service-box">
                 <div class="service-info">
                     <h4>Projeto em C++</h4>
-                    <p>Um programa em C que gerencia reservas de assentos em salas de cinema, permitindo:
-
-                        Escolha de filmes e assentos disponíveis.
-                        Compra de ingressos com opção de meia-entrada e combos.
-                        Cancelamento de reservas com ajuste no total arrecadado.
-                        Geração de relatórios financeiros.
-                        O projeto explora conceitos de estrutura de dados, manipulação de matrizes
-                        e interação com o usuário por meio de menus simples e eficientes. 
+                    <p>Este projeto em linguagem C consiste em um sistema robusto e completo de bilheteria
+                        de cinema, projetado para gerenciar de forma eficiente todo o processo de vendas
+                        de ingressos. Desde a reserva de lugares nas salas de cinema até o controle financeiro,
+                        o sistema foi desenvolvido com o objetivo de simular um ambiente real utilizado em cinemas.
+                        Ele busca não apenas automatizar tarefas manuais, mas também fornecer uma experiência intuitiva
+                        e organizada para os usuários.
+                        <br>
+                        <br>
+                        Funcionalidades principais:
+                        <br>
+                        - Escolha de filmes e assentos disponíveis.
+                        <br>
+                        - Compra de ingressos com opção de meia-entrada e combos.
+                        <br>
+                        - Cancelamento de reservas com ajuste no total arrecadado.
+                        <br>
+                        - Geração de relatórios financeiros.
+                        <br>
+                        - O projeto explora conceitos de estrutura de dados, manipulação de matrizes
+                        <br>
+                        - e interação com o usuário por meio de menus simples e eficientes. 
+                        <br>
+                        <br>
 
                         Projeto Proposto pela Universidade Católica de Brasília
                         <a href="https://github.com/Gustavo3522/Bilheteria" target="_blank">Ver Projetos</a>
@@ -223,18 +253,25 @@
                 <div class="service-info">
                     <h4>Projetos em Phyton</h4>
                     <p>Loja Virtual - Simulador de Pagamento
-
+                        <br>
                         Este projeto é uma aplicação em Python que simula um sistema de pagamento
                         para uma loja virtual. Ele permite ao usuário calcular o preço final de uma
                         compra com base na forma de pagamento escolhida.
-                        
+                        <br>
+                        <br>
                         Funcionalidades principais:
+                        <br>
                         - Cálculo de descontos: Aplicação de descontos para pagamentos à vista em dinheiro,
                         cheque ou cartão.
+                        <br>
                         - Parcelamento sem juros: Opção de parcelamento em 2x no cartão, sem acréscimos.
+                        <br>
                         - Parcelamento com juros: Parcelamento em 3x ou mais no cartão, com acréscimo de
                         20% sobre o valor total.
+                        <br>
                         - Validação de entrada: Tratamento de opções inválidas de pagamento.
+                        <br>
+                        <br>
 
                         O projeto reforça a prática de estruturas condicionais e cálculos financeiros básicos,
                         sendo ideal para aprendizado em lógica de programação e interação com o usuário.
